Criando rodapé, deixando site responsivo.

--- a/assets/css/sobre/sobre-titulo.css
+++ b/assets/css/sobre/sobre-titulo.css
@@ -1,6 +1,16 @@
 .sobre__titulo {
     color: brown;
-    text-align: center;
     Font-family: Pacifico, cursive;
-    font-size: 3.1875rem;
+}
+
+@media screen and (min-width: 0) {
+    .sobre__titulo {
+         font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sobre__titulo {
+        font-size: 3.1875rem;
+    }
 }
