--- a/assets/css/banner/banner-imagem.css
+++ b/assets/css/banner/banner-imagem.css
@@ -1,5 +1,16 @@
 .banner__imagem {
     background: url('../../img/banner.png') no-repeat center / cover;
-    height: calc( 100vh - 72px);
     width: 100%;
+}
+
+@media screen and (min-width: 0) {
+    .banner__imagem {
+        height: calc( 100vh - 72px);
+    }
+}
+
+@media screen and (min-width: 0) {
+    .banner__imagem {
+        height: calc( 100vh - 72px);
+    }
 }
