Atualização resposivel, add img favicon.

--- a/assets/css/banner/banner-titulo.css
+++ b/assets/css/banner/banner-titulo.css
@@ -16,8 +16,8 @@
     }
 }
 
-@media screen and (min-width: 0) {
+@media screen and (min-width: 440px) {
     .banner__titulo {
-        Font-size: 5.0625rem;
+        font-size: 5.0625rem;
     }
 }
